--- a/themes/snow-white/layout/_partial/head.ejs
+++ b/themes/snow-white/layout/_partial/head.ejs
@@ -1,12 +1,16 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:description" content="<%= config.description %>">
 <meta property="og:type" content="website">
 <% if (page.description) { %>
 <meta name="description" content="<%= page.description %>">
+<meta property="og:description" content="<%= page.description %>">
+<% } else if (page.excerpt) { %>
+<meta name="description" content="<%= page.excerpt %>">
+<meta property="og:description" content="<%= page.excerpt %>">
 <% } else { %>
 <meta name="description" content="<%= config.description %>">
+<meta property="og:description" content="<%= config.description %>">
 <% } %>
 <% if (page.keyword) { %>
 <meta name="keyword" content="<%= page.keyword %>">
